--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.6",
-    "@react-google-maps/api": "^2.7.0",
-    "react-load-script": "^0.0.6",
-    "react-toastify": "^9.0.8",
-    "@tawk.to/tawk-messenger-react": "^2.0.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/material": "^5.6.0",
+    "@react-google-maps/api": "^2.7.0",
+    "@tawk.to/tawk-messenger-react": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,8 +21,11 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-load-script": "^0.0.6",
+    "react-onesignal": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
